# book-scraper-api

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  dockerfile  pyproject.toml
api/: config.py  db.py  logging_config.py  main.py  metrics_store.py  security.py  tasks.py
api/models/: book.py  category.py  user.py
api/routers/: auth.py  books.py  categories.py  ml.py  scraping.py  stats.py
api/schemas/: ml.py
api/services/: book_service.py  category_service.py  ml_helpers.py  ml_service.py  user_service.py
scripts/: scrape_books.py
streamlit/: streamlit_dashboard.py
